<resources>
    <string name="app_name">Projet_MoodlETS</string>
    <string name="mes">Mes</string>
    <string name="travaux">Travaux</string>
    <string name="cours">Cours</string>
    <string name="horaire">Horaire</string>
    <string name="rechercher_un_cours">Rechercher un cours</string>
    <string name="rechercher_un_travail">Rechercher un travail</string>
    <string name="tous_les_travaux_filtres">Tous les travaux</string>
    <string name="_100">100%</string>
    <string name="generalites">Généralités</string>
    <string name="votre_note_cours">Votre note</string>
    <string name="annonces">Annonces</string>
    <string name="txt_cours_travail">Bases de données</string>
    <string name="date_echeance_travail">1 avril 2026 à 23:59</string>
    <string name="note_travail">Note :</string>
    <string name="description_cours">Description :</string>
    <string name="enseignant_cours">Enseignants :</string>
    <string name="statut_travail">À faire</string>
    <string name="tous_les_travaux">Tous les travaux</string>
    <string name="faire_filtre">À faire</string>
    <string name="en_retard_filtre">En Retard</string>
    <string name="remis_filtre">Remis</string>
    <string name="corrige_filtres">Corrigé</string>
    <string name="g_n_ralit_s">Généralités</string>
    <string name="date_limite">Date limite:</string>
    <string name="nom_du_cours_travail">Nom du cours</string>
    <string name="nom_du_travail_details">Nom du travail</string>
    <string name="statut_travail_details">Statut</string>
    <string name="type_travail">Type</string>
    <string name="date_limite_travail_details">Date limite :</string>
    <string name="description">Description:</string>
    <string name="date">Date</string>
    <string name="d_tails">Détails</string>
    <string name="instructions">Instructions :</string>
    <string name="instructions_Travai_Details">Instructions</string>
    <string name="marquer_comme_remis">Marquer comme remis</string>
    <string name="entrez_votre_message">Entrez votre message</string>
    <string name="entrez_l_url_de_votre_travail">Entrez l\'URL de votre travail</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="correction">Correction</string>
    <string name="date_Travail_Details">Date</string>
    <string name="message">Message</string>
    <string name="remis_le">Remis le :</string>
    <string name="url_du_travail">URL du travail</string>
    <string name="commentaires">Commentaires</string>
    <string name="votre_note">Votre note</string>
    <string name="n_a">N/A</string>
    <string name="lazhar_khelifi">Lazhar Khelifi</string>
    <string name="ajoutez_un_message">Ajoutez un message</string>
    <string name="entrez_l_url_de_votre_travail_details">Entrez l\'URL de votre travail</string>
    <string name="rechercher_un_quiz">Rechercher un quiz</string>
    <string name="quiz">Quiz</string>
    <string name="tous_les_quiz">Tous les quiz</string>
    <string name="non_commenc">Non commencé</string>
    <string name="termin">Terminé</string>
    <string name="nom_du_quiz">Nom du quiz</string>
    <string name="_1_question">1 question</string>
    <string name="nombre_de_questions">Nombre de questions :</string>
    <string name="remis_le_quiz">Remis le :</string>
    <string name="commencer">Commencer</string>
    <string name="date_limite_quiz_details">Date limite :</string>
    <string name="a_traitement">A. Traitement</string>
    <string name="b_m_moire">B. Mémoire</string>
    <string name="c_cran">C. Écran</string>
    <string name="retour">Retour</string>
    <string name="prochain">Prochain</string>
    <string name="question">Question ?</string>
    <string name="mon_prenom">Mon prénom</string>
    <string name="mon_nom">Mon nom</string>
    <string name="mon_courriel">Mon courriel</string>
    <string name="mon_numero_telephone">Mon numéro de téléphone</string>
    <string name="url_ma_photo">L\'URL de ma photo de profil</string>
    <string name="mon_mot_de_passe">Mon mot de passe</string>
</resources>