<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_layout_item_travail"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:background="@drawable/forme_list_travail"
    android:paddingLeft="12dp"
    android:paddingTop="8dp"
    android:paddingRight="12dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/img_travail"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_centerVertical="false"
        android:src="@drawable/icone_travail"
        tools:ignore="ContentDescription" />

    <Space
        android:id="@+id/space3"
        android:layout_width="12dp"
        android:layout_height="62dp"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/img_travail" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/space3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_filtre_travail"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:background="@drawable/statut_travail"
            android:elevation="4dp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="6dp"
            android:paddingTop="1dp"
            android:paddingRight="6dp"
            android:paddingBottom="1dp"
            android:text="@string/statut_travail"
            android:textSize="8sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txt_nom_travail"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Nom du travail"
            android:textColor="@color/Carbon"
            android:textSize="16sp"
            tools:ignore="HardcodedText,TextSizeCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_date_echeance_travail"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/date_echeance_travail"
                android:textColor="@color/Carbon_70"
                android:textSize="10sp"
                tools:ignore="SmallSp,TextSizeCheck" />

            <Space
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="4dp"
                android:layout_height="4dp"
                app:srcCompat="@drawable/ellipse_gris"
                tools:ignore="ContentDescription" />

            <Space
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_cours_travail"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:text="@string/txt_cours_travail"
                android:textColor="@color/Carbon_70"
                android:textSize="10sp"
                tools:ignore="SmallSp,TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="14dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="0dp"
        android:textAlignment="center"
        app:srcCompat="@drawable/caretright__1_"
        tools:ignore="ContentDescription" />

    <Space
        android:id="@+id/space4"
        android:layout_width="12dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_note_travail"
        android:layout_width="50dp"
        android:layout_height="12dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/space4"
        android:fontFamily="@font/poppins_light"
        android:text="@string/note_travail"
        android:textColor="@color/Carbon_70"
        android:textSize="10sp"
        tools:ignore="SmallSp,TextSizeCheck" />

    <TextView
        android:id="@+id/txt_Score_Pourcentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/space4"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_100"
        android:textColor="@color/Carbon"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

</RelativeLayout>